--- a/02-Components/index.html
+++ b/02-Components/index.html
@@ -8,8 +8,6 @@
     <title>User List</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="zinc.js"></script>
-    <script src=""></script>
 </head>
 
 <body>
@@ -17,9 +15,12 @@
         <h1>User List</h1>
 
         <ul class="user-list" id="z-user-list">
-            <user-item></user-item>
+            <user-item></user-item>  
         </ul>
     </div>
+
+    <script src="zinc.js"></script>
+    <script src="user.js"></script>
 </body>
 
 </html>
